Add image assets (11 files) and update .gitignore with image documentation

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,9 @@ yarn-error.log*
 
 # Misc
 coverage/
+
+# Large image files (optional - keep locally but don't track in git)
+# images/**/*.jpeg
+# images/**/*.jpg
+# images/**/*.png
+# images/**/*.webp
