Perf: Netlify Functions caching + snapshot pre-render - Add per-feed timeout & Accept header in Netlify utils - Short CDN cache headers (30s + SWR 60s) for rss & aggregate - Limit items to 60 and sort aggregate by pubDate desc - Add snapshot generator script (tools/generate-snapshot.js) + /data/feeds.json placeholder - Pre-render featured news using snapshot before live fetch in content-loader.js - Add npm script "snapshot" to run generator

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "Static site for This is Fuerteventura with Netlify Functions (RSS proxy, aggregate)",
   "scripts": {
     "start": "npx http-server -p 8000 .",
-    "netlify:dev": "netlify dev"
+    "netlify:dev": "netlify dev",
+    "snapshot": "node tools/generate-snapshot.js"
   },
   "engines": {
     "node": ">=18"
