--- a/netlify.toml
+++ b/netlify.toml
@@ -11,3 +11,7 @@
   from = "/api/aggregate"
   to = "/.netlify/functions/aggregate"
   status = 200
+
+[[scheduled]]
+  path = "/.netlify/functions/warm"
+  schedule = "*/5 * * * *"
