--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "start": "npx http-server -p 8000 .",
     "netlify:dev": "netlify dev",
-    "snapshot": "node tools/generate-snapshot.js"
+    "snapshot": "node tools/generate-snapshot.js",
+    "security:csp": "node tools/inject-jsonld-csp-hashes.js",
+    "security:sri": "node tools/inject-sri.js",
+    "security:validate": "node tools/validate-html.js",
+    "security:all": "node tools/inject-jsonld-csp-hashes.js && node tools/inject-sri.js && node tools/validate-html.js"
   },
   "engines": {
     "node": ">=18"
