--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "jest"
+    "test": "cross-env CI=true jest"
   },
   "engines": {
     "node": ">=18"
@@ -18,7 +18,8 @@
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
-    "jest": "^25.0.0",
+    "cross-env": "^7.0.3",
+    "jest": "^29.7.0",
     "supertest": "^7.0.0"
   }
 }
